src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
    font-family: "Pretendard-Black";
    src: url("./public/fonts/Pretendard-Black.ttf");
}

@font-face {
    font-family: "Pretendard-ExtraBold";
    src: url("./public/fonts/Pretendard-ExtraBold.ttf");
}

@font-face {
    font-family: "Pretendard-Bold";
    src: url("./public/fonts/Pretendard-Bold.ttf");
}

@font-face {
    font-family: "Pretendard-SemiBold";
    src: url("./public/fonts/Pretendard-SemiBold.ttf");
}

@font-face {
    font-family: "Pretendard-Medium";
    src: url("./public/fonts/Pretendard-Medium.ttf");
}

@font-face {
    font-family: "Pretendard-Regular";
    src: url("./public/fonts/Pretendard-Regular.ttf");
}

@font-face {
    font-family: "Pretendard-Light";
    src: url("./public/fonts/Pretendard-Light.ttf");
}

@font-face {
    font-family: "Pretendard-ExtraLight";
    src: url("./public/fonts/Pretendard-ExtraLight.ttf");
}

@font-face {
    font-family: "Pretendard-Thin";
    src: url("./public/fonts/Pretendard-Thin.ttf");
}


body {
    @apply font-PretendardBlack;
    margin: 0 auto; /* Center align the body content */
    padding: 0;
    height: auto;
    min-height: 100vh; /* Ensure the body covers the viewport height */
    max-width: 370px; /* Set the maximum width to 370px */
    width: 100%; /* Make the width responsive */
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    background-color: #1f1f1f;
    align-items: center;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

